# routes/api.php
@@ -5,14 +5,21 @@ use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\Api\JobController as JobController;
 use App\Http\Controllers\Api\UserController;
-use App\Http\Controllers\Api\WorklodController;
+use App\Http\Controllers\Api\WorkloadController;
 
 Route::middleware('auth:sanctum')->group(function () {
-  Route::apiResource('jobs', JobController::class);
-  Route::apiResource('users', UserController::class);
-  Route::apiResource('worklods', WorklodController::class);
-  Route::get('users/{user}/worklods', [UserController::class, 'worklods'])->name('users.worklods.index');
-  Route::get('users/{user}/worklods/{date}', [UserController::class, 'getWorklodByDate'])->name('users.worklods.showByDate');
-  Route::post('users/{user}/worklods', [UserController::class, 'assignWorklod'])->name('users.worklods.store');
-  Route::delete('users/{user}/worklods/{worklod}', [UserController::class, 'removeWorklod'])->name('users.worklods.destroy');
+    Route::apiResource('jobs', JobController::class);
+    Route::apiResource('users', UserController::class);
+    
+    // Workload Routes
+    Route::get('workloads/calendar', [WorkloadController::class, 'calendar']);
+    Route::apiResource('workloads', WorkloadController::class);
+
+    // Specific User Workload associations
+    Route::prefix('users/{user}')->group(function () {
+        Route::get('workloads', [UserController::class, 'workloads']);
+        Route::get('workloads/{date}', [UserController::class, 'getWorkloadByDate']);
+        Route::post('workloads', [UserController::class, 'assignWorkload']);
+        Route::delete('workloads/{workload}', [UserController::class, 'removeWorkload']);
+    });
 });
